tests/baselines/reference/parser.numericSeparators.unicodeEscape.errors.txt
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.ts(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/10.ts(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/11.ts(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/13.ts(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/14.ts(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/15.ts(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/17.ts(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/18.ts(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/19.ts(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.ts(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/21.ts(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/22.ts(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/23.ts(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/25.ts(1,11): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/26.ts(1,11): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/27.ts(1,11): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/37.ts(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/38.ts(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/39.ts(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/41.ts(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/42.ts(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/43.ts(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/45.ts(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/46.ts(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/47.ts(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.ts(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/7.ts(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/9.ts(1,5): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.ts (1 errors) ====
    "\u{10_ffff}"
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.ts (1 errors) ====
    '\u{10_ffff}'
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts (1 errors) ====
    `\u{10_ffff}`
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.ts (0 errors) ====
    /\u{10_ffff}/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts (1 errors) ====
    "\uff_ff"
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.ts (1 errors) ====
    '\uff_ff'
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/7.ts (1 errors) ====
    `\uff_ff`
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/8.ts (0 errors) ====
    /\uff_ff/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/9.ts (1 errors) ====
    "\xf_f"
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/10.ts (1 errors) ====
    '\xf_f'
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/11.ts (1 errors) ====
    `\xf_f`
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/12.ts (0 errors) ====
    /\xf_f/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/13.ts (1 errors) ====
    "\u{_10ffff}"
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/14.ts (1 errors) ====
    '\u{_10ffff}'
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/15.ts (1 errors) ====
    `\u{_10ffff}`
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/16.ts (0 errors) ====
    /\u{_10ffff}/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/17.ts (1 errors) ====
    "\u_ffff"
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/18.ts (1 errors) ====
    '\u_ffff'
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/19.ts (1 errors) ====
    `\u_ffff`
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/20.ts (0 errors) ====
    /\u_ffff/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/21.ts (1 errors) ====
    "\x_ff"
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/22.ts (1 errors) ====
    '\x_ff'
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/23.ts (1 errors) ====
    `\x_ff`
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/24.ts (0 errors) ====
    /\x_ff/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/25.ts (1 errors) ====
    "\u{10ffff_}"
              
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/26.ts (1 errors) ====
    '\u{10ffff_}'
              
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/27.ts (1 errors) ====
    `\u{10ffff_}`
              
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/28.ts (0 errors) ====
    /\u{10ffff_}/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/29.ts (0 errors) ====
    "\uffff_"
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/30.ts (0 errors) ====
    '\uffff_'
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/31.ts (0 errors) ====
    `\uffff_`
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/32.ts (0 errors) ====
    /\uffff_/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/33.ts (0 errors) ====
    "\xff_"
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/34.ts (0 errors) ====
    '\xff_'
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/35.ts (0 errors) ====
    `\xff_`
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/36.ts (0 errors) ====
    /\xff_/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/37.ts (1 errors) ====
    "\u{10__ffff}"
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/38.ts (1 errors) ====
    '\u{10__ffff}'
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/39.ts (1 errors) ====
    `\u{10__ffff}`
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/40.ts (0 errors) ====
    /\u{10__ffff}/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/41.ts (1 errors) ====
    "\uff__ff"
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/42.ts (1 errors) ====
    '\uff__ff'
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/43.ts (1 errors) ====
    `\uff__ff`
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/44.ts (0 errors) ====
    /\uff__ff/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/45.ts (1 errors) ====
    "\xf__f"
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/46.ts (1 errors) ====
    '\xf__f'
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/47.ts (1 errors) ====
    `\xf__f`
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/48.ts (0 errors) ====
    /\xf__f/u
    